# dsh

./: .gitignore  CMakeLists.txt  README.md  TODO  XConnection.hpp  bg.cpp  bg.hpp  btn.cpp  btn.hpp  button.cpp  button.hpp  col.cpp  col.hpp  config.hpp  conn.hpp  dbg.hpp  dcv.cpp  dcv.hpp  deskshell.cpp  dir.cpp  dir.hpp  do.cpp  do.hpp  dpy.cpp  dpy.hpp  dpycmd.cpp  dpycmd.hpp  dpycmds.hpp  dpyfs.c  dpysys.cpp  dpysys.hpp  dpytests.cpp  drm.cpp  dsh.cpp  dshell.cpp  dshfs.c  dshfs.cpp  dsys.cpp  dsys.hpp  ent.cpp  (+151 more)
backups/: evts.cpp  mouse.cpp  mouse.hpp
include/: bg.hpp  cmds.hpp  dbg.hpp  dcv.hpp  dpy.hpp  drm.hpp  ent.hpp  errno.hpp  evm.hpp  file.hpp  fs.hpp  kb.hpp  kbf.hpp  keywait.hpp  lsdir.hpp  parse.hpp  pos.hpp  scr.hpp  ssys.hpp  topos.hpp  types.hpp  utf8.hpp  wd.hpp  wndctl.hpp  wndx.hpp  wndy.hpp
lib/: bg.cpp  dpy.cpp  drm.cpp  egl.cpp  ev.cpp  evm.cpp  fb.cpp  file.cpp  gbm.cpp  kb.cpp  keywait.cpp  locale.cpp  lsdir.cpp  makefile  mf.cpp  mrd.cpp  msys.cpp  mwnd.cpp  res.cpp  utf8.cpp  wndd.cpp  wndx.cpp  wndxc.cpp  wsys.cpp
libdsh/: CMakeLists.txt  btn.hpp  col.cpp  col.hpp  fb.cpp  fb.hpp  ft.cpp  kb.hpp  mouse.cpp  mouse.hpp  ms.cpp  ptr.hpp  rect.cpp  rect.hpp  scr.cpp  scr.hpp  taskb.cpp  taskb.hpp  wnd.cpp  wnd.hpp
src/: dshfs.cpp  makefile
tests/: fsktest.cpp  fsmtest.cpp  kbsystest.cpp  kbtest.cpp  makefile  msystest.cpp  wndfstest.cpp  wsystest.cpp  wtest.cpp
